[project]
name = "lundpython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.0.0",
    "jupyter>=1.1.1",
    "jupyterlab-rise>=0.42.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
tools = [
    "ipytest>=0.14.2",
    "ipywidgets>=8.1.5",
    "line-profiler>=4.1.3",
    "tqdm>=4.67.1",
]
